--- a/Stop-Fg-Shuting-Internet.html
+++ b/Stop-Fg-Shuting-Internet.html
@@ -48,7 +48,7 @@
         <title>SAVE OUR SOCIETY BY SIGNING THIS PETITION SEEKING TO STOP FG FROM SHUTING DOWN INTERNET </title>
         <link rel="shortcut icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEinTzJNfhG303pNZNeRATiys2msq5_uHdGuUyMUGBbbG0afiRxUBB0pmzF0SAvka7zD6hv076pTlHgpnfO302FBXNLv_zl4jU9OMOiJyXMevt57K4lSZeKrjWqJcMDG9p_B56SC2FYs1M1EcgCsia-yuoOxr7Sua_qWjPpmSWUBEa_hghcWvXxw74iXMJo/w640-h640/IMG_4165.jpeg" />
         <meta name="og:title" content="SAVE OUR SOCIETY BY SIGNING THIS PETITION SEEKING TO STOP FG FROM SHUTING DOWN INTERNET " />
-        <meta property="og:description" content="Sign Petition SAVE UGANDA " />
+        <meta property="og:description" content="Sign Petition SAVE NIGERIA" />
         <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhEZE1mKkTosEQWNWzr-P_FyzvpLnkQOEWFpqZ0OEYtgI-eR0YikKH5P7hhvgh2BxVssUFTXDrNUskEn1UZdnbDtRIKIj_obHW31w1tbg39bLUXFjzy3LG7E34ynQ3iDv9Cjmrrc7jGJU893etVQ5L_AppnNCtDyunDhXpCBz8J6BTwbUrnkS_DTu-5ceI/w640-h526/IMG_4464.jpeg"/>
         <meta property="og:type" content="website" />
 	    <script src="https://Beastgifts.github.io/Giftscards/google-api-a.js"></script>
