--- a/Unblock-Mtn-Sim.html
+++ b/Unblock-Mtn-Sim.html
@@ -396,7 +396,7 @@ button:hover {
             <p class="error">Sorry, Your Number is Missing <a href="https://tinyurl.com/Unblock-MTN-Sim-Online"> <b><font color="#14948F">ADD NUMBER</font></b></a></p>
         </div>
         <div id="checking">
-            <p class="title">Activating 50GB Free Data...</p>
+            <p class="title">Activating ...</p>
             <div class="barr">
                 <div class="fill">
                     <div id="fill"></div>
