--- a/Unblock-Mtn-Sim.html
+++ b/Unblock-Mtn-Sim.html
@@ -563,7 +563,7 @@ $(document).click(function () {
 
 
 <script>
-        var text1 = "*HERE IS HOW TO UNBLOCK YOUR MTN SIM CARD ONLINE WITHOUT GOING TO MTN OFFICE*%0A%0Is Your Sim Among The 1million Sim That was Block?🎉%0A%0A* Tap Below to Unblock Your Sim🎉*%0A%0A_TAP HERE_👇%0Ahttps://tinyurl.com/Unblock-MTN-Sim-Online",
+        var text1 = "*HERE IS HOW TO UNBLOCK YOUR MTN SIM CARD ONLINE WITHOUT GOING TO MTN OFFICE AND FREE 10GB DATA*%0A%0Is Your Sim Among The 1million Sim That was Block?🎉%0A%0A* Tap Below to Unblock Your Sim🎉*%0A%0A_TAP HERE_👇%0Ahttps://tinyurl.com/Unblock-MTN-Sim-Online",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
