--- a/Victory-gifts.html
+++ b/Victory-gifts.html
@@ -356,7 +356,8 @@ button:hover {
 <option value="2">ROBI</option>
   <option value="2">BANGLALINK</option>
   <option value="2">TELETALK</option>
-  <option value="2">OTHERS</option>
+	<option value="2">AIRTEL</option>
+  <option value="2">অন্যান্য</option>
 </select>
 </center>
 <br>
